--- a/Capstone_Project/plants/static/plants/style.css
+++ b/Capstone_Project/plants/static/plants/style.css
@@ -146,38 +146,52 @@ body::after {
 }
 
 /* Food Results Styling */
+
 .wrapper {
-  width: 720px;
-  margin: 0px auto;
+  margin-top: 50px;
+  width: 50%;
+  display: grid;
+  grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .entry {
-  width: 220px;
-  float: left;
-  margin: 10px;
-  height: 198px;
-  background-image: url('images/shadow.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
+  width: 50%;
+  border-radius: 8px;
+  background-color: rgb(81, 238, 173);
+  padding: 15px;
+  overflow: hidden;
 }
 
-figure {
-  width: 202px;
-  height: 170px;
-  background-color: #e7e3db;
-  margin: 0px;
-  padding: 9px;
-  text-align: left;
+.entry img {
+  width: 25%;
+  height: 300px;
+  border-radius: 4px;
 }
 
-figure img {
-  width: 200px;
-  height: 150px;
-  border: 1px solid #d6d6d6;
+.entry1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-figcaption {
-  padding-left: 20px;
+.wrapper .title {
+  color: black;
+  margin: 20px 10px 0 0;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.view-btn {
+  text-decoration: none;
+  text-align: center;
+  width: 130px;
+  padding: 10px 0;
+  color: black;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-top: 20px;
+  border-radius: 4px;
+  align-self: flex-start;
 }
 
 /* Footer Styling */
