--- a/Capstone_Project/plants/templates/plants/dashboard.html
+++ b/Capstone_Project/plants/templates/plants/dashboard.html
@@ -19,12 +19,54 @@
         </div>
     </div>
     <div>
-        <li v-for="(data, i) in mealsResult">
-            <p>RECIPE: [[data?.recipe?.label]]</p> 
+        <div v-for="(data, i) in mealsResult">
+            <p>[[data?.recipe?.label]]</p> 
             <p><img v-bind:src="[[data?.recipe?.image]]" alt="Food Image"></p>
             <p><a v-bind:href="data?.recipe?.url">[[data?.recipe?.url]]</a></p>
-        </li>    
+        </div>    
     </div>
+
+        <!-- !PAGE CONTENT! -->
+    <!-- <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px"> -->
+
+        <!-- First Photo Grid-->
+        <!-- <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+        <div class="w3-quarter" v-for="(data, i) in mealsResult">
+            <img v-bind:src="[[data?.recipe?.image]]" alt="Food Image" style="width:25%">
+            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+            <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        <div class="w3-quarter">
+            <img src="/w3images/steak.jpg" alt="Steak" style="width:100%">
+            <h3>Let Me Tell You About This Steak</h3>
+            <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        <div class="w3-quarter">
+            <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
+            <h3>Cherries, interrupted</h3>
+            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+            <p>What else?</p>
+        </div>
+        <div class="w3-quarter">
+            <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
+            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        </div>
+        </div> -->
+    
+        <!-- Pagination -->
+        <div class="w3-center w3-padding-32">
+        <div class="w3-bar">
+            <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
+            <a href="#" class="w3-bar-item w3-black w3-button">1</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+        </div>
+    </div>
+
+
     <footer>
         <div id="edamam-badge" data-color="white"></div>    
     </footer>
