--- a/Capstone_Project/plants/templates/plants/dashboard.html
+++ b/Capstone_Project/plants/templates/plants/dashboard.html
@@ -18,8 +18,8 @@
             <button v-on:click="searchMeals">Search</button> 
         </div>
     </div>
-    <div>
-        <div v-for="(data, i) in mealsResult">
+    <div class="entry">
+        <div class="entry1" v-for="(data, i) in mealsResult">
             <p>[[data?.recipe?.label]]</p> 
             <p><img v-bind:src="[[data?.recipe?.image]]" alt="Food Image"></p>
             <p><a v-bind:href="data?.recipe?.url">[[data?.recipe?.url]]</a></p>
