--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -37,46 +37,7 @@
         </div>
     </div>
 
-    <!-- <footer class="footer">
-        <img class="above" src="{% static 'plants/images/food footer2.png' %}" alt="Farm Footer">  
-        <p>Footer</p>
-        <div>
-            <h3>About</h3>   
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod minima neque enim facilis corporis explicabo quos non distinctio iure, quasi incidunt ducimus optio ex quisquam? Consequuntur, sapiente id. Perspiciatis, libero!</p>
-            <a href="{% url 'plants:aboutPage' %}">READ MORE</a>
-        </div>
-        <div>
-            <h3>Information</h3>
-            <ul>
-                <li><a href="#">Legal Notice</a></li>
-                <li><a href="#">Lorem, ipsum.</a></li>
-                <li><a href="#">Lorem, ipsum.</a></li>
-                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                <li><a href="#">Lorem, ipsum.</a></li>
-            </ul>
-        </div>
-        <hr>
-        <div>
-            <p class="copyright">Copyright ©2021 - All Rights. Reserved</p>    
-        </div>
-        <div>
-            <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Site Map</a></li>
-            </ul>
-        </div>
-        <div class="siteinfo">
-            <h3>Get In</h3>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="#" class="fa fa-instagram"></a>
-        </div>
-    </footer> -->
-
-    <script>
+    <!-- <script>
         window.onscroll = function() {myFunction()};
         
         var header = document.getElementById("myHeader");
@@ -89,7 +50,7 @@
             header.classList.remove("sticky");
             }
         }
-    </script>
+    </script> -->
     {% block plants %}
     {% endblock %}
 </body>
