--- a/Capstone_Project/quizGame/static/quizGame/style.css
+++ b/Capstone_Project/quizGame/static/quizGame/style.css
@@ -4,6 +4,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 
 html,
 body {
